--- a/html-stuff/index.html
+++ b/html-stuff/index.html
@@ -5,9 +5,9 @@
     <title>my prsonal</title>
   </head>
   <body>
-<h1>hhhh🤓</h1>
-<textarea placeholder="test me" cols="100" rows="20"></textarea>
-<textarea placeholder="Describe yourself here..."></textarea>
-
+    <h1>hhhh🤓</h1>
+    <textarea placeholder="test me" cols="100" rows="20"></textarea>
+    <h1>this is h1</h1>
+    <hr size = "10" noshade>
   </body>
 </html>
