responsive tansform added

--- a/html-stuff/responsive.html
+++ b/html-stuff/responsive.html
@@ -10,7 +10,9 @@
   <body>
 
     <header>
-      <h1>Responsive CSS</h1>
+      <h1>Responsive </h1>
+      <span>CS</span>
+      <span>S</span>
     </header>
 
     <nav class="navbar">
@@ -21,6 +23,15 @@
         <li class="navitem right"><a href="#">Login</a></li>
       </ul>
     </nav>
-
+  <section>
+    <div class="container">
+      <img src="https://static.pexels.com/photos/52500/horse-herd-fog-nature-52500.jpeg">
+      <img src="https://static.pexels.com/photos/66898/elephant-cub-tsavo-kenya-66898.jpeg">
+      <img src="https://static.pexels.com/photos/213399/pexels-photo-213399.jpeg">
+      <img src="https://static.pexels.com/photos/158471/ibis-bird-red-animals-158471.jpeg">
+      <img src="https://static.pexels.com/photos/50988/ape-berber-monkeys-mammal-affchen-50988.jpeg">
+      <img src="https://static.pexels.com/photos/133459/pexels-photo-133459.jpeg">
+    </div>
+  </section>
   </body>
 </html>
